--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -1,8 +1,8 @@
 "Enabling this feature will disable partial cache invalidation. Full varnish cache flush will be executed instead, according to the cron expression configured below.","Enabling this feature will disable partial cache invalidation. Full varnish cache flush will be executed instead, according to the cron expression configured below."
-"Magento is configured to use the built-in Full Page Cache. To use VelocityEDGE please change ""Caching Application"" to ""Varnish Cache"" under the ""Full Page Cache"" tab in <a href=""%1"">System Configuration</a>","Magento is configured to use the built-in Full Page Cache. To use VelocityEDGE please change ""Caching Application"" to ""Varnish Cache"" under the ""Full Page Cache"" tab in <a href=""%1"">System Configuration</a>"
+"Magento is configured to use the built-in Full Page Cache. To use Webscale Varnish please change ""Caching Application"" to ""Varnish Cache"" under the ""Full Page Cache"" tab in <a href=""%1"">System Configuration</a>","Magento is configured to use the built-in Full Page Cache. To use Webscale Varnish please change ""Caching Application"" to ""Varnish Cache"" under the ""Full Page Cache"" tab in <a href=""%1"">System Configuration</a>"
 "Please configure API Token and Application Id.","Please configure API Token and Application Id."
 "To be able to use Webscale varnish cache please configure ""Application Id"".","To be able to use Webscale varnish cache please configure ""Application Id""."
-"VelocityEDGE cache flushed successfully.","VelocityEDGE cache flushed successfully."
+"Webscale Varnish cache flushed successfully.","Webscale Varnish cache flushed successfully."
 "There is error occurred while trying to purge varnish cache. Please refer to logs for more information.","There is error occurred while trying to purge varnish cache. Please refer to logs for more information."
 "Can't save the cron expression.","Can't save the cron expression."
 Disabled,Disabled
@@ -10,10 +10,10 @@ Hourly,Hourly
 Daily,Daily
 Custom,Custom
 "--Please Select--","--Please Select--"
-"Flush VelocityEDGE Cache","Flush VelocityEDGE Cache"
-"Webscale VelocityEDGE cache.","Webscale VelocityEDGE cache."
+"Flush Webscale Varnish Cache","Flush Webscale Varnish Cache"
+"Webscale Varnish cache.","Webscale Varnish cache."
 Webscale,Webscale
-VelocityEDGE,VelocityEDGE
+Webscale Varnish,Webscale Varnish
 "General Configuration","General Configuration"
 Enabled,Enabled
 Application,Application
